misc fixes (spacing mostly)

--- a/less/framework/page-elements/base.less
+++ b/less/framework/page-elements/base.less
@@ -61,6 +61,7 @@ a:focus {
   border-bottom: 1px solid rgba(0, 50, 25, 0.35);
   border-top: 1px solid rgba(0, 50, 25, 0.25);
   background-color: rgba(255, 200, 10, 0.1);
+  margin-top:  5px;
 }
 
 
