--- a/less/ualberta/pages/current-students.less
+++ b/less/ualberta/pages/current-students.less
@@ -23,10 +23,7 @@
 .current-students-b .sidebar .links ul li:first-child a {
   border-top: none;
 }
-.current-students .sidebar .links ul li:first-child a:hover,
-.current-students-b .sidebar .links ul li:first-child a:hover {
-  border-top: none;
-}
+
 .current-students .sidebar .date,
 .current-students-b .sidebar .date {
   line-height: 1em;
@@ -151,11 +148,6 @@
 	}
 
 
-
-.current-students .content-top-row {
-
-}
-
 .current-students .image-slider {
 	position: relative;
 	overflow-y: hidden;
@@ -169,32 +161,10 @@
 }
 	
 
-.current-students .sidebar a.btn-green {
-	display: block;
-}
-
-.current-students .btn-large {
-	border-radius: 5px 5px 5px 5px;
-	font-size: 15px;
-	line-height: normal;
-	padding: 9px 14px;
-}
-	
-@media (max-width: 1200px) {
-
-
-}
-
 @media (max-width: 980px) {
 	.current-students .content-inner {
 		height: auto;
 	}
-	
-	.current-students .content-inner .fma-btns {
-
-	}
-	
-
 }
 	
 @media (max-width: 690px) {
