--- a/less/ualberta/pages/faculty-and-staff.less
+++ b/less/ualberta/pages/faculty-and-staff.less
@@ -1,6 +1,5 @@
 .facultyandstaff {
 	.content-inner {
-		height: 300px;
 	}
 	.content-inner {
 		position: relative;
