--- a/less/ualberta/pages/why-ualberta.less
+++ b/less/ualberta/pages/why-ualberta.less
@@ -1,6 +1,6 @@
 .why-ualberta {
 	h2.page-title{
-		margin-top:0.5em;
+		margin-top:0.8em;
 	}
   .content-top-row {
     background-image: url('../img/whirl-bg.png');
@@ -12,6 +12,7 @@
     position: absolute;
     top: 0;
     width: 100%;
+    margin-top: 0px;
   }
   
   .fma-container {
